<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Akan</string>

    <color name="white">#FFFFFF</color>

    <string name="hint_search">Pesquisar</string>
    <string name="congressman_name">nome</string>
    <string name="congressman_party">partido</string>
    <string name="ordinary_symbol">º</string>
    <string name="congressman_home_state">estado</string>
    <string name="ranking_position">100</string>
    <string name="image_description_photo">photo congressman</string>
    <string name="image_description_default">&quot;&quot;</string>
    <string name="image_description_quota_telephony">Telefonia</string>
    <string name="image_description_quota_technical_work_and_consulting">Contratações</string>
    <string name="image_description_quota_postal_service">Serviços Postais</string>
    <string name="image_description_quota_issuance_of_air_tickets">Passagens Aéreas</string>
    <string name="image_description_quota_safety">Segurança</string>
    <string name="image_description_quota_alimentation">Alimentação</string>
    <string name="image_description_quota_fuel">Combustíveis</string>
    <string name="image_description_quota_air_freight">Locação ou Fretamento</string>
    <string name="image_description_quota_lease_vehicle">Automoveis e Embarcações</string>
    <string name="image_description_quota_office">Escritório</string>
    <string name="image_description_quota_accommodation">Hospedagem</string>
    <string name="image_description_quota_disclosure_parliamentary_activity">Divulgação</string>
    <string name="image_description_quota_signature_of_publication">Assinatura de Revistas</string>
    <string name="image_description_developers">Desenvolvedores</string>
    <string name="image_description_design">Design</string>
    <string name="trace">-</string>
    <string name="monetary_symbol">R$ </string>
    <string name="total_expenditure">0000,00</string>
    <string name="place">Lugar</string>
    <string name="follow">Seguir</string>
    <string name="followed">Seguido</string>
    <string name="party">Partido</string>
    <string name="layout_style_photo">imagem de fundo</string>
    <string name="name">Nome</string>
    <string name="congressman">Parlamentares</string>
    <string name="quota">Cotas</string>
    <string name="configurations">Configuações</string>
    <string name="legend_text">Gastos médios dos Deputados</string>
    <string name="months">Meses</string>
    <string name="expenditure">Gastos(R$)</string>

    <string-array name="month_names">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril	</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Jullho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
    
	<string name="order_ranking">order_ranking</string>
	<string name="order_state">order_state</string>
	<string name="order_party">order_party</string>
	<string name="order_alphabetic">order_alphabetic</string>
	
    <string name="title_activity_configurations">Configurations</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="about_akan">\n A proposta do aplicativo AKAN é promover a consciência orçamentária
        através do fácil acesso a valores gastos com Cotas para Exercício da Atividade Parlamentar
        (CEAP) de cada Deputado Federal em mandato corrente.
        \n\n
        A Cota é composta pelas despessas que o parlamentar necessita para o exercício de sua função.
        São gastos com passagens aéreas,telefonia, serviços postais, manutenção de escritório, alimentação,
        hospedagem, fretamento de veículos, combustíveis,serviços de seguranças, contratações e divulgação 
        de atividade parlamentar.
        \n\n
        No aplicativo AKAN, a cor da Cota muda de acordo com o valor gasto pelo parlamentar.Toque em um parlamentar
         e veja quanto ele gasto e com o quê ele gasta.    
         \n\n 
    </string>
    
    <string name="about_air_ticket">Valores gastos com compras de passagens aéreas. O valor máximo autorizado para esta Cota varia de acordo com o estado do parlamentar. </string>
    <string name="about_telefony">Valores gastos com linhas instaladas em imóveis funcionais, celulares funcionais, ligações interurbanas e internacionais, e com ligações a cobrar. </string>
    <string name="about_postal_service" >Valores gastos com serviços postais exceto compra de selos. </string>
    <string name="about_office">Valores gatos com locação de imóveis, material de expediente, assinatura de TV a cabo ou similar,acesso a internet dentre outros. </string>
    <string name="about_alimentation">Valores gastos com fornecimento de alimentação do parlamentar. </string> 
    <string name="about_accommodation">Valores gastos com diárias em hóteis, exceto a parlamentares do  Distrito Federal. </string>
    <string name="about_air_freight">Valores gastos com locação ou fretamento de aeronaves,embarcações e veículos automotores. </string>
    <string name="about_fuel"> Valores gastos com combustíveis e lubrificantes no limite de até R$ 4.500,00 por mês.</string>  
    <string name="about_safety">Valores gastos com seerviços prestados por empresas de seguranças,no limite de até R$ 4.500,00 por mês.</string>
    <string name="about_techinical_work_and_consulting">Valores gastos com serviços de consultorias e trabalhos técnicos, permitidas pesquisas socioeconômicas.</string>
    <string name="about_disclosure_parliamentary_activity">Valores gastos com divulgação de atividade parlamentar,exceto nos 120 dias anteriores à data das eleições.</string>
    <string name="about_lease_vehicle">Valores gastos com aluguel e fretamento de automoveis e embarcações.</string>
    <string name="about_signature_of_publication">Valores gastos com assinatura de revistas.</string>
    
    <string name="about_credits">Créditos</string>
    <string name="about_development">Desenvolvimento</string>    
    <string name="about_design">Design</string>
    <string name="pedro_costa">Pedro Costa\npirlimpas@gmail.com</string>    
    <string name="arthur_Jahn">Arthur Jahn\nstutrzbecher@gmail.com </string>
    <string name="maxwell_almeida">Maxwell Almeida\nllewxam150@gmail.com </string>
    <string name="tomaz_martins">Tomáz Martins\ntomaz.r.martins@gmail.com </string>
    <string name="matheus_fonseca">Matheus Fonseca\n1matheusfonseca@gmail.com </string>
    <string name="thaiane_braga">Thaiane Braga\nthaianefbraga@gmail.com </string>     
    
    <string name="facebook_app_id">394663470723879</string>

</resources>
