<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/extended_bar"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:clickable="false"
    android:descendantFocusability="blocksDescendants"
    android:focusable="false"
	android:focusableInTouchMode="false" >

    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/ranking_layout_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ranking_layout_congressman_photo"
            android:layout_centerInParent="true"
            android:layout_marginTop="-8dp"
            android:text="@string/ranking_position"
            android:textColor="#000033"
            android:textSize="15sp" />
        
      	<ImageView
            android:id="@+id/layout_style_photo"
            android:layout_margin="5dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:src="@drawable/background_photo"
            android:contentDescription="@string/image_description_default" />
 
        <br.com.visualize.akan.api.helper.RoundedImageView
            android:layout_margin="10dp"
            android:id="@+id/ranking_layout_congressman_photo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:src="@drawable/default_photo" />
		
        <TextView
            android:id="@+id/ranking_layout_txt_ordinary_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/ranking_layout_position"
            android:layout_alignBottom="@+id/ranking_layout_position"
            android:layout_alignEnd="@+id/ranking_layout_position"
            android:layout_alignRight="@+id/ranking_layout_position"
            android:layout_marginEnd="-10dp"
            android:layout_marginRight="-10dp"
            android:layout_marginTop="5dp"
            android:text="@string/ordinary_symbol"
            android:textColor="#000033"
            android:textSize="15sp" />
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.39" >
        
        <TextView
            android:id="@+id/ranking_layout_txt_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
        	android:layout_alignParentBottom="true"
            android:text="@string/total_expenditure" />    
        
        <TextView
            android:id="@+id/ranking_layout_txt_congressman_party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ranking_layout_txt_congressman_name"
            android:layout_alignLeft="@+id/ranking_layout_txt_congressman_name"
            android:layout_marginTop="40dp"
            android:textSize="12sp"
            android:textColor="#536571"
            android:text="@string/congressman_party" />
        
        <TextView
            android:id="@+id/ranking_layout_txt_espace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/ranking_layout_txt_congressman_party"
            android:layout_toRightOf="@+id/ranking_layout_txt_congressman_party"
            android:layout_alignTop="@+id/ranking_layout_txt_congressman_party"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:textSize="12sp"
            android:text="@string/trace" />

        <TextView
            android:id="@+id/txt_home_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           	android:layout_alignTop="@+id/ranking_layout_txt_congressman_party"
           	android:layout_toEndOf="@+id/ranking_layout_txt_espace"
           	android:layout_toRightOf="@+id/ranking_layout_txt_espace"
           	android:layout_marginStart="2dp"
           	android:layout_marginLeft="2dp"
           	android:textColor="#536571"
           	android:textSize="12sp"
            android:text="@string/congressman_home_state" />

        <TextView
            android:layout_margin="15dp"
            android:id="@+id/ranking_layout_txt_congressman_name"
            android:layout_width="wrap_content"
            android:maxWidth="220dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textColor="#536571"
            android:text="@string/congressman_name" />
    </RelativeLayout>
    
	
	        
	     <Button
               android:id="@+id/list_btn_follow"
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:onClick="followedCongressman"
               android:layout_marginEnd="15dp"
               android:layout_marginRight="15dp"
               android:layout_marginTop="25dp"
               android:background="@drawable/followed_button" />            
	
</LinearLayout>